# CGAssignment1

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  main.cpp
src/polynomial/: Polynomial.cpp  Polynomial.hpp  PolynomialDrawer.cpp  PolynomialDrawer.hpp
src/shader/: FragShader.frag  VertShader.vert
src/util/: ArrayRef.hpp  Defines.hpp  Result.cpp  Result.hpp
src/vulkan/: CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  Fence.cpp  Fence.hpp  Framebuffer.cpp  Framebuffer.hpp  Functions.cpp  Functions.hpp  GraphicsPipelineCreateInfoPack.cpp  GraphicsPipelineCreateInfoPack.hpp  Pipeline.cpp  Pipeline.hpp  PipelineLayout.cpp  PipelineLayout.hpp  RenderPass.cpp  RenderPass.hpp  RenderPassWithFramebuffers.hpp  Semaphore.cpp  Semaphore.hpp  ShaderModule.cpp  ShaderModule.hpp  VulkanBase.cpp  VulkanBase.hpp
src/window/: Window.cpp  Window.hpp
